--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.vivoweb</groupId>
 	<artifactId>vivo-installer-i18n</artifactId>
-	<version>1.11.0</version>
+	<version>1.11.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>VIVO Installer</name>
