--- a/home/pom.xml
+++ b/home/pom.xml
@@ -1,124 +1,125 @@
-<project
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>vitro-installer-home</artifactId>
-    <packaging>pom</packaging>
+	<artifactId>vitro-installer-home</artifactId>
+	<packaging>pom</packaging>
 
-    <parent>
-        <groupId>org.vivoweb</groupId>
-        <artifactId>vivo-installer-i18n</artifactId>
-        <version>1.11.2-SNAPSHOT</version>
-        <relativePath>..</relativePath>
-    </parent>
+	<parent>
+		<groupId>org.vivoweb</groupId>
+		<artifactId>vivo-installer-i18n</artifactId>
+		<version>1.11.2-SNAPSHOT</version>
+		<relativePath>..</relativePath>
+	</parent>
 
-    <name>Vitro Install Home for i18n</name>
+	<name>Vitro Install Home for i18n</name>
 
-    <properties>
-        <default-theme>vitro</default-theme>
-    </properties>
+	<properties>
+		<default-theme>vitro</default-theme>
+	</properties>
 
-    <profiles>
-        <profile>
-            <id>install</id>
-            <activation>
-                <property><name>vivo-dir</name></property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <configuration>
-                            <descriptors>
-                                <descriptor>src/main/assembly/home.xml</descriptor>
-                            </descriptors>
-                            <appendAssemblyId>false</appendAssemblyId>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>single</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>remove-webapp</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <target>
-                                        <delete dir="${vivo-dir}/rdf" />
-                                    </target>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>install</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${vivo-dir}</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${project.build.directory}/${project.build.finalName}</directory>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+	<modules>
+		<module>../../Vitro/home</module>
+		<module>../../VIVO/home</module>
+		<module>../../VIVO-languages/home</module>
+	</modules>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-install-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+	<profiles>
+		<profile>
+			<id>install</id>
+			<activation>
+				<property>
+					<name>vivo-dir</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/home.xml</descriptor>
+							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>remove-webapp</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<target>
+										<delete dir="${vivo-dir}/rdf" />
+									</target>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>install</id>
+								<phase>install</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${vivo-dir}</outputDirectory>
+									<resources>
+										<resource>
+											<directory>${project.build.directory}/${project.build.finalName}</directory>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.vivoweb</groupId>
-            <artifactId>vivo-home</artifactId>
-                <version>1.11.2-SNAPSHOT</version>
-            <type>tar.gz</type>
-        </dependency>
-        <!-- Dependency for multilingual support -->
-        <dependency>
-            <groupId>org.vivoweb</groupId>
-            <artifactId>vivo-languages-home</artifactId>
-            <version>1.11.2-SNAPSHOT</version>
-            <type>tar.gz</type>
-        </dependency>
-    </dependencies>
-    <groupId>org.vivoweb</groupId>
-    <version>1.11.2-SNAPSHOT</version>
-    <modules>
-    	<module>../../Vitro-1/home</module>
-    	<module>../../VIVO-1/home</module>
-    	<module>../../Vivo-Languages/home</module>
-    </modules>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vivo-home</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>tar.gz</type>
+		</dependency>
+		<!-- Dependency for multilingual support -->
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vivo-languages-home</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>tar.gz</type>
+		</dependency>
+	</dependencies>
+	<groupId>org.vivoweb</groupId>
+	<version>1.11.2-SNAPSHOT</version>
 </project>
