Ajouter les dépendances à tous les langages disponibles

--- a/webapp_dep/pom.xml
+++ b/webapp_dep/pom.xml
@@ -38,13 +38,19 @@
 		<module>../../Vitro/api</module>
 		<module>../../Vitro/dependencies</module>
 		<module>../../Vitro/webapp</module>
+		<module>../../Vitro-languages/core/webapp</module>
 		<module>../../Vitro-languages/fr_CA/webapp</module>
 		<module>../../Vitro-languages/en_US/webapp</module>
 		<module>../../Vitro-languages/de_DE/webapp</module>
+		<module>../../Vitro-languages/es/webapp</module>
+		<module>../../Vitro-languages/pt_BR/webapp</module>
 		<module>../../VIVO/api</module>
 		<module>../../VIVO/webapp</module>
+		<module>../../VIVO-languages/core/webapp</module>
 		<module>../../VIVO-languages/fr_CA/webapp</module>
 		<module>../../VIVO-languages/en_US/webapp</module>
 		<module>../../VIVO-languages/de_DE/webapp</module>
+		<module>../../VIVO-languages/es/webapp</module>
+		<module>../../VIVO-languages/pt_BR/webapp</module>
 	</modules>
 </project>
