--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -169,6 +169,30 @@
 		<!-- Dependencies for multilingual support -->
 		<dependency>
 			<groupId>org.vivoweb</groupId>
+			<artifactId>vitro-languages-webapp-core</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vivo-languages-webapp-core</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vitro-languages-webapp-en_US</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vivo-languages-webapp-en_US</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
 			<artifactId>vitro-languages-webapp-fr_CA</artifactId>
 			<version>1.11.2-SNAPSHOT</version>
 			<type>war</type>
@@ -176,6 +200,42 @@
 		<dependency>
 			<groupId>org.vivoweb</groupId>
 			<artifactId>vivo-languages-webapp-fr_CA</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vitro-languages-webapp-es</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vivo-languages-webapp-es</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vitro-languages-webapp-de_DE</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vivo-languages-webapp-de_DE</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vitro-languages-webapp-pt_BR</artifactId>
+			<version>1.11.2-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.vivoweb</groupId>
+			<artifactId>vivo-languages-webapp-pt_BR</artifactId>
 			<version>1.11.2-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
