--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -206,6 +206,18 @@
         </dependency>
         <dependency>
             <groupId>org.vivoweb</groupId>
+            <artifactId>vitro-languages-webapp-en_CA</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vivo-languages-webapp-en_CA</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
             <artifactId>vitro-languages-webapp-es</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>war</type>
