--- a/webapp_dep/pom.xml
+++ b/webapp_dep/pom.xml
@@ -40,6 +40,7 @@
         <module>../../Vitro/webapp</module>
         <module>../../Vitro-languages/core/webapp</module>
         <module>../../Vitro-languages/fr_CA/webapp</module>
+        <module>../../Vitro-languages/fr_FR/webapp</module>
         <module>../../Vitro-languages/en_US/webapp</module>
         <module>../../Vitro-languages/en_CA/webapp</module>
         <module>../../Vitro-languages/de_DE/webapp</module>
@@ -49,6 +50,7 @@
         <module>../../VIVO/webapp</module>
         <module>../../VIVO-languages/core/webapp</module>
         <module>../../VIVO-languages/fr_CA/webapp</module>
+        <module>../../VIVO-languages/fr_FR/webapp</module>
         <module>../../VIVO-languages/en_US/webapp</module>
         <module>../../VIVO-languages/en_CA/webapp</module>
         <module>../../VIVO-languages/de_DE/webapp</module>
