--- a/home/pom.xml
+++ b/home/pom.xml
@@ -25,6 +25,8 @@
     <modules>
         <module>../../Vitro/home</module>
         <module>../../VIVO/home</module>
+        <module>../../VIVO-fr_FR/home</module>
+        <module>../../VIVO-EHESS/home</module>
         <module>../../VIVO-languages/core/home</module>
         <module>../../VIVO-languages/en_US/home</module>
         <module>../../VIVO-languages/en_CA/home</module>
@@ -33,6 +35,7 @@
         <module>../../VIVO-languages/pt_BR/home</module>
         <module>../../VIVO-languages/fr_CA/home</module>
         <module>../../VIVO-languages/fr_FR/home</module>
+        <module>../../VIVO-languages-EHESS/home</module>
     </modules>
 
     <profiles>
@@ -122,6 +125,18 @@
             <version>1.11.2-SNAPSHOT</version>
             <type>tar.gz</type>
         </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vivo-home-fr_FR</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>tar.gz</type>
+        </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vivo-home-EHESS</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>tar.gz</type>
+        </dependency>
         <!-- Dependency for multilingual support -->
         <dependency>
             <groupId>org.vivoweb</groupId>
@@ -168,6 +183,12 @@
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>vivo-languages-home-pt_BR</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>tar.gz</type>
+        </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vivo-languages-home-EHESS</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>tar.gz</type>
         </dependency>
