--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,29 @@
             </dependency>
             <dependency>
                 <groupId>org.vivoweb</groupId>
+                <artifactId>vivo-api-fr_FR</artifactId>
+                <version>${vitro-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.vivoweb</groupId>
+                <artifactId>vivo-api-EHESS</artifactId>
+                <version>${vitro-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.vivoweb</groupId>
                 <artifactId>vivo-webapp</artifactId>
+                <version>${vitro-version}</version>
+                <type>war</type>
+            </dependency>
+            <dependency>
+                <groupId>org.vivoweb</groupId>
+                <artifactId>vivo-webapp-fr_FR</artifactId>
+                <version>${vitro-version}</version>
+                <type>war</type>
+            </dependency>
+            <dependency>
+                <groupId>org.vivoweb</groupId>
+                <artifactId>vivo-webapp-EHESS</artifactId>
                 <version>${vitro-version}</version>
                 <type>war</type>
             </dependency>
