--- a/webapp_dep/pom.xml
+++ b/webapp_dep/pom.xml
@@ -31,9 +31,9 @@
     </properties>
     <packaging>pom</packaging>
     <modules>
-        <!-- Faire attention au nom des répertoires, ils doivent correspondre 
-            à l'emplacement de l'extraction du Vitro project et VIVO Project Pay attention 
-            to the name of the directories, they must correspond to the extraction location 
+        <!-- Faire attention au nom des répertoires, ils doivent correspondre
+            à l'emplacement de l'extraction du Vitro project et VIVO Project Pay attention
+            to the name of the directories, they must correspond to the extraction location
             of the Vitro project and VIVO Project. -->
         <module>../../Vitro/api</module>
         <module>../../Vitro/dependencies</module>
@@ -46,7 +46,8 @@
         <module>../../Vitro-languages/de_DE/webapp</module>
         <module>../../Vitro-languages/es/webapp</module>
         <module>../../Vitro-languages/pt_BR/webapp</module>
-        <module>../../VIVO/api</module>
+        <module>../../Vitro-languages-EHESS/webapp</module>
+        <module>../../VIVO/api</module>      
         <module>../../VIVO/webapp</module>
         <module>../../VIVO-languages/core/webapp</module>
         <module>../../VIVO-languages/fr_CA/webapp</module>
@@ -56,5 +57,12 @@
         <module>../../VIVO-languages/de_DE/webapp</module>
         <module>../../VIVO-languages/es/webapp</module>
         <module>../../VIVO-languages/pt_BR/webapp</module>
+        <module>../../VIVO-languages-EHESS/webapp</module>
+        <module>../../Vitro-fr_FR/webapp</module>
+        <module>../../Vitro-EHESS/webapp</module>
+        <module>../../VIVO-fr_FR/api</module>
+        <module>../../VIVO-EHESS/api</module>
+        <module>../../VIVO-fr_FR/webapp</module>
+        <module>../../VIVO-EHESS/webapp</module>
     </modules>
 </project>
