--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
                 <artifactId>vivo-api</artifactId>
                 <version>${vitro-version}</version>
             </dependency>
-            <dependency>
+            <!--dependency>
                 <groupId>org.vivoweb</groupId>
                 <artifactId>vivo-api-fr_FR</artifactId>
                 <version>${vitro-version}</version>
@@ -141,14 +141,14 @@
                 <groupId>org.vivoweb</groupId>
                 <artifactId>vivo-api-EHESS</artifactId>
                 <version>${vitro-version}</version>
-            </dependency>
+            </dependency-->
             <dependency>
                 <groupId>org.vivoweb</groupId>
                 <artifactId>vivo-webapp</artifactId>
                 <version>${vitro-version}</version>
                 <type>war</type>
             </dependency>
-            <dependency>
+            <!--dependency>
                 <groupId>org.vivoweb</groupId>
                 <artifactId>vivo-webapp-fr_FR</artifactId>
                 <version>${vitro-version}</version>
@@ -159,7 +159,7 @@
                 <artifactId>vivo-webapp-EHESS</artifactId>
                 <version>${vitro-version}</version>
                 <type>war</type>
-            </dependency>
+            </dependency-->
         </dependencies>
     </dependencyManagement>
 
