--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -4,18 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.vivoweb</groupId>
-    <artifactId>vivo-installer-vivo</artifactId>
+    <artifactId>vivo-installer-webapp-EHESS</artifactId>
     <version>1.11.2-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
-        <artifactId>vivo-installer-i18n</artifactId>
+        <artifactId>vivo-installer-EHESS</artifactId>
         <version>1.11.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
-    <name>VIVO Install Web App for i18n</name>
+    <name>VIVO Install Web App for EHESS</name>
     <developers>
         <developer>
             <name>Michel Héon PhD</name>
@@ -51,30 +51,34 @@
                             </archive>
                             <archiveClasses>false</archiveClasses>
                             <overlays>
-                            <!-- Overlays for multilingual support -->
-                            	<overlay>
+                                <!-- Overlays for multilingual support -->
+                                <overlay>
                                     <groupId>org.vivoweb</groupId>
                                     <artifactId>vivo-webapp-EHESS</artifactId>
                                     <type>war</type>
                                 </overlay>
-                               	<overlay>
+                                <overlay>
                                     <groupId>org.vivoweb</groupId>
                                     <artifactId>vivo-webapp-fr_FR</artifactId>
                                     <type>war</type>
                                 </overlay>
+                                <!-- <overlay> -->
+                                <!-- <groupId>fr.ehess</groupId> -->
+                                <!-- <artifactId>vitro-languages-webapp-EHESS</artifactId> -->
+                                <!-- <type>war</type> -->
+                                <!-- </overlay> -->
                                 <overlay>
-	                                <groupId>org.vivoweb</groupId>
-	                                <artifactId>vitro-languages-webapp-EHESS</artifactId>
-	                                <type>war</type>
+                                    <groupId>fr.ehess</groupId>
+                                    <artifactId>vitro-languages-webapp-EHESS-fr_FR</artifactId>
                                 </overlay>
-	                            <overlay>
-	                                <groupId>org.vivoweb</groupId>
-	                                <artifactId>vivo-languages-webapp-EHESS</artifactId>
-                            	</overlay>
                                 <overlay>
-                                  <groupId>org.vivoweb</groupId>
-                                  <artifactId>vitro-webapp-EHESS</artifactId>
-                                  <type>war</type>
+                                    <groupId>fr.ehess</groupId>
+                                    <artifactId>vitro-languages-webapp-EHESS-en_US</artifactId>
+                                </overlay>
+                                <overlay>
+                                    <groupId>org.vivoweb</groupId>
+                                    <artifactId>vitro-webapp-EHESS</artifactId>
+                                    <type>war</type>
                                 </overlay>
                                 <overlay>
                                     <groupId>fr.ehess</groupId>
@@ -188,18 +192,18 @@
     </build>
 
     <dependencies>
-		<dependency>
-		    <groupId>fr.ehess</groupId>
-		    <artifactId>vitro-webapp-fr_FR</artifactId>
-		    <version>1.11.2-SNAPSHOT</version>
-		    <type>war</type>
-		</dependency>
-		<dependency>
-		    <groupId>org.vivoweb</groupId>
-		    <artifactId>vitro-webapp-EHESS</artifactId>
-		    <version>1.11.2-SNAPSHOT</version>
-		    <type>war</type>
-		</dependency>
+        <dependency>
+            <groupId>fr.ehess</groupId>
+            <artifactId>vitro-webapp-fr_FR</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vitro-webapp-EHESS</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>vivo-api</artifactId>
@@ -333,14 +337,14 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.vivoweb</groupId>
-            <artifactId>vitro-languages-webapp-EHESS</artifactId>
+            <groupId>fr.ehess</groupId>
+            <artifactId>vitro-languages-webapp-EHESS-fr_FR</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.vivoweb</groupId>
-            <artifactId>vivo-languages-webapp-EHESS</artifactId>
+            <groupId>fr.ehess</groupId>
+            <artifactId>vitro-languages-webapp-EHESS-en_US</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
