--- a/webapp_dep/pom.xml
+++ b/webapp_dep/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.vivoweb</groupId>
-        <artifactId>vivo-installer-i18n</artifactId>
+        <artifactId>vivo-installer-EHESS</artifactId>
         <version>1.11.2-SNAPSHOT</version>
     </parent>
     <groupId>org.vivoweb</groupId>
     <artifactId>webapp_dep</artifactId>
     <version>1.11.2-SNAPSHOT</version>
-    <name>VIVO WebApp Install dependencies for i18n</name>
+    <name>VIVO WebApp Install dependencies for EHESS</name>
     <url>http://maven.apache.org</url>
     <developers>
         <developer>
@@ -47,7 +47,8 @@
         <module>../../Vitro-languages/es/webapp</module>
         <module>../../Vitro-languages/pt_BR/webapp</module>
         <module>../../Vitro-languages_fr_FR/fr_FR/webapp/</module>
-        <module>../../Vitro-languages-EHESS/webapp</module>
+        <module>../../Vitro-languages-EHESS/fr_FR/webapp</module>
+        <module>../../Vitro-languages-EHESS/en_US/webapp</module>
         <module>../../VIVO/api</module>      
         <module>../../VIVO/webapp</module>
         <module>../../VIVO-languages/core/webapp</module>
