VIVO-languages_fr_FR: Creating directory structure for fr_FR

--- a/webapp_dep/pom.xml
+++ b/webapp_dep/pom.xml
@@ -54,6 +54,7 @@
         <module>../../VIVO-languages/core/webapp</module>
         <module>../../VIVO-languages/fr_CA/webapp</module>
         <module>../../VIVO-languages/fr/webapp</module>
+        <module>../../VIVO-languages-fr_FR/fr_FR/webapp</module>
         <module>../../VIVO-languages/en_US/webapp</module>
         <module>../../VIVO-languages/en_CA/webapp</module>
         <module>../../VIVO-languages/de_DE/webapp</module>
