--- a/home/pom.xml
+++ b/home/pom.xml
@@ -35,6 +35,7 @@
         <module>../../VIVO-languages/pt_BR/home</module>
         <module>../../VIVO-languages/fr_CA/home</module>
         <module>../../VIVO-languages/fr/home</module>
+        <module>../../VIVO-languages-fr_FR/fr_FR/home</module>
         <module>../../VIVO-languages-EHESS/home</module>
     </modules>
 
@@ -184,6 +185,12 @@
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>vivo-languages-home-pt_BR</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>tar.gz</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.ehess</groupId>
+            <artifactId>vivo-languages-home-fr_FR</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>tar.gz</type>
         </dependency>
