--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -106,6 +106,11 @@
                                 <!-- <artifactId>vivo-languages-webapp-fr_CA</artifactId> -->
                                 <!-- <type>war</type> -->
                                 <!-- </overlay> -->
+                                <overlay>
+                                    <groupId>fr.ehess</groupId>
+                                    <artifactId>vivo-languages-webapp-fr_FR</artifactId>
+                                    <type>war</type>
+                                </overlay>
                             </overlays>
                             <webResources>
                                 <resource>
@@ -284,6 +289,12 @@
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>vivo-languages-webapp-fr_CA</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.ehess</groupId>
+            <artifactId>vivo-languages-webapp-fr_FR</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
