--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.vivoweb</groupId>
+    <groupId>fr.ehess</groupId>
     <artifactId>vivo-installer-EHESS</artifactId>
     <version>1.11.2-SNAPSHOT</version>
     <packaging>pom</packaging>
