--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -3,13 +3,13 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.vivoweb</groupId>
-    <artifactId>vivo-installer-webapp-EHESS</artifactId>
+    <groupId>fr.ehess</groupId>
+    <artifactId>vivo-installer-EHESS-webapp</artifactId>
     <version>1.11.2-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
-        <groupId>org.vivoweb</groupId>
+        <groupId>fr.ehess</groupId>
         <artifactId>vivo-installer-EHESS</artifactId>
         <version>1.11.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
@@ -69,11 +69,11 @@
                                 <!-- </overlay> -->
                                 <overlay>
                                     <groupId>fr.ehess</groupId>
-                                    <artifactId>vitro-languages-webapp-EHESS-fr_FR</artifactId>
+                                    <artifactId>vitro-languages-EHESS-webapp-fr_FR</artifactId>
                                 </overlay>
                                 <overlay>
                                     <groupId>fr.ehess</groupId>
-                                    <artifactId>vitro-languages-webapp-EHESS-en_US</artifactId>
+                                    <artifactId>vitro-languages-EHESS-webapp-en_US</artifactId>
                                 </overlay>
                                 <overlay>
                                     <groupId>org.vivoweb</groupId>
@@ -354,13 +354,25 @@
         </dependency>
         <dependency>
             <groupId>fr.ehess</groupId>
-            <artifactId>vitro-languages-webapp-EHESS-fr_FR</artifactId>
+            <artifactId>vitro-languages-EHESS-webapp-fr_FR</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>fr.ehess</groupId>
-            <artifactId>vitro-languages-webapp-EHESS-en_US</artifactId>
+            <artifactId>vitro-languages-EHESS-webapp-en_US</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.ehess</groupId>
+            <artifactId>vivo-languages-EHESS-webapp-fr_FR</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.ehess</groupId>
+            <artifactId>vivo-languages-EHESS-webapp-en_US</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>war</type>
         </dependency>
